--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+	<meta name="google-site-verification" content="0zJzvzRHEoRftwfWaossiLHJPIIEdTbOIgIMcXLB9LE" />
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
