--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       </div>
       <div class="col-md-6 animate-box">
         <div class="progress-wrap ftco-animate">
-          <h3>Docker, Docker Compose</h3>
+          <h3>Docker</h3>
           <div class="progress">
             <div class="progress-bar color-5" role="progressbar" aria-valuenow="85"
               aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -315,7 +315,7 @@
       </div>
       <div class="col-md-6 animate-box">
         <div class="progress-wrap ftco-animate">
-          <h3>Linux, Bash Scripting</h3>
+          <h3>Linux</h3>
           <div class="progress">
             <div class="progress-bar color-6" role="progressbar" aria-valuenow="90"
               aria-valuemin="0" aria-valuemax="100" style="width:60%">
