--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
 	          <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
+			  <li class="nav-item"><a href="#portfolio-section" class="nav-link"><span>Portfolio</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -142,26 +143,26 @@
 						</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2006-2022</span>
-    					<h2>Oracle Developer</h2>
+    					<span class="date">2022-Present</span>
+    					<h2>Software Developer</h2>
     					<span class="position">EMS</span>
     					<p class="mt-4">
-							<li>Developed business cases and mapped business processes for efficient system design</li> 
-							<li>Designed, developed, and maintained Java EE application modules using Oracle Jdeveloper ADF, EJB JPA</li>
-						    <li>Created interfaces and maintained applications using Oracle Forms and Report Builder</li> 
+							<li>Designed, developed, and tested Java EE application modules using Oracle Jdeveloper ADF</li>
+						    <li>Implemented API integrations using Golang for external system connectivity</li> 
+							<li>Spearheaded the transition to Golang for improved system performance</li>
 						</p>
     				</div>
     			</div>
 
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2022-Present</span>
-    					<h2>Software Developer</h2>
+    					<span class="date">2006-2022</span>
+    					<h2>Oracle Developer</h2>
     					<span class="position">EMS</span>
     					<p class="mt-4">
-						 	<li>Designed, developed, and tested Java EE application modules using Oracle Jdeveloper ADF</li>
-						    <li>Implemented API integrations using Golang for external system connectivity</li> 
-							<li>Spearheaded the transition to Golang for improved system performance</li>
+						 	<li>Developed business cases and mapped business processes for efficient system design</li> 
+							<li>Designed, developed, and maintained Java EE application modules using Oracle Jdeveloper ADF, EJB JPA</li>
+						    <li>Created interfaces and maintained applications using Oracle Forms and Report Builder</li> 
 						 </p>
     				</div>
     				<div class="resume-wrap ftco-animate">
@@ -190,7 +191,7 @@
         </div>
     		<div class="row">
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1">
+						<a href="https://en.wikipedia.org/wiki/Requirements_analysis" target="_blank" rel="noopener noreferrer" class="services-1">
 							<span class="icon">
 								<i class="flaticon-analysis"></i>
 							</span>
@@ -200,7 +201,7 @@
 						</a>
 					</div>
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1">
+						<a href="https://en.wikipedia.org/wiki/Requirements_analysis" target="_blank" rel="noopener noreferrer" class="services-1">
 							<span class="icon">
 								<i class="flaticon-flasks"></i>
 							</span>
@@ -210,7 +211,7 @@
 						</a>
 					</div>
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1">
+						<a href="https://en.wikipedia.org/wiki/Requirements_analysis" target="_blank" rel="noopener noreferrer" class="services-1">
 							<span class="icon">
 								<i class="flaticon-ideas"></i>
 							</span>
@@ -221,7 +222,7 @@
 					</div>
 
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1">
+						<a href="https://en.wikipedia.org/wiki/Requirements_analysis" target="_blank" rel="noopener noreferrer" class="services-1">
 							<span class="icon">
 								<i class="flaticon-analysis"></i>
 							</span>
@@ -231,7 +232,7 @@
 						</a>
 					</div>
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1">
+						<a href="https://en.wikipedia.org/wiki/Requirements_analysis" target="_blank" rel="noopener noreferrer" class="services-1">
 							<span class="icon">
 								<i class="flaticon-flasks"></i>
 							</span>
@@ -241,7 +242,7 @@
 						</a>
 					</div>
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="#" class="services-1">
+						<a href="https://en.wikipedia.org/wiki/Requirements_analysis" target="_blank" rel="noopener noreferrer" class="services-1">
 							<span class="icon">
 								<i class="flaticon-ideas"></i>
 							</span>
@@ -255,7 +256,7 @@
     </section>
 
 		
-		<section class="ftco-section" id="skills-section">
+ <section class="ftco-section" id="skills-section">
   <div class="container">
     <div class="row justify-content-center pb-5">
       <div class="col-md-12 heading-section text-center ftco-animate">
@@ -335,6 +336,51 @@
   </div>
 </section>
 
+<section id="portfolio-section" class="ftco-section">
+  <div class="container">
+    <div class="row justify-content-center mb-5 pb-3">
+        <div class="col-md-7 heading-section text-center ftco-animate">
+			<h1 class="big big-2">Portfolio</h1>
+        	<h2 class="mb-4">Portfolio</h2>
+        	<p>Check out some of my recent work on GitHub.</p>
+      </div>
+    </div>
+    <div class="row">
+
+					<div class="col-md-4 text-center d-flex ftco-animate">
+						<a href="https://github.com/tijanadmi/tis_api" target="_blank" rel="noopener noreferrer" class="services-1">
+							<div class="desc">
+								<h3 class="mb-5">TIS API</h3>
+							</div>
+							<div class="desc">
+								<p class="mb-5">Web service built with Golang.</p>
+							</div>
+						</a>
+					</div>
+					<div class="col-md-4 text-center d-flex ftco-animate">
+						<a href="https://github.com/tijanadmi/sftp-xml" target="_blank" rel="noopener noreferrer" class="services-1">
+							<div class="desc">
+								<h3 class="mb-5">SFTP XML</h3>
+							</div>
+							<div class="desc">
+								<p class="mb-5">Automated file transfer service.</p>
+							</div>
+						</a>
+					</div>
+					<div class="col-md-4 text-center d-flex ftco-animate">
+						<a href="https://github.com/tijanadmi/go-sarto" target="_blank" rel="noopener noreferrer" class="services-1">
+							<div class="desc">
+								<h3 class="mb-5">GO SARTO</h3>
+							</div>
+							<div class="desc">
+								<p class="mb-5">An application for hotel accommodation booking.</p>
+							</div>
+						</a>
+					</div>
+    </div>
+  </div>
+</section>
+
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
       <div class="container">
       	<div class="row justify-content-center mb-5 pb-3">
@@ -346,7 +392,7 @@
         </div>
 
         <div class="row d-flex contact-info mb-5">
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          <div class="col-md-6 col-lg-4 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-map-signs"></span>
@@ -355,16 +401,8 @@
 	            <p>Belgrade, Serbia</p>
 	          </div>
           </div>
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-          	<div class="align-self-stretch box p-4 text-center">
-          		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-phone2"></span>
-          		</div>
-          		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel:+381648408871">+ 381 64 8408 871</a></p>
-	          </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          
+          <div class="col-md-6 col-lg-4 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-paper-plane"></span>
@@ -373,7 +411,7 @@
 	            <p><a href="mailto:tijanadmi@yahoo.com?subject=Hello&body=I would like to discuss...">tijanadmi@yahoo.com</a></p>
 	          </div>
           </div>
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          <div class="col-md-6 col-lg-4 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-globe"></span>
@@ -391,19 +429,19 @@
 
     <footer class="ftco-footer ftco-section">
       <div class="container">
-        <div class="row mb-5">
-          <div class="col-md">
+        <div class="row mb-5 justify-content-center">
+          <div class="col-md text-center">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
               <p>I'm a software engineer specializing in backend development using Golang</p>
-              <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
+              <ul class="ftco-footer-social list-unstyled d-flex justify-content-center mt-5">
                 <li class="ftco-animate"><a href="https://x.com/IlijevTijana" target="_blank" rel="noopener noreferrer"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="https://facebook.com/tijana.dmitrovicilijev" target="_blank" rel="noopener noreferrer"><span class="icon-facebook"></span></a></li>
                 <li class="ftco-animate"><a href="https://instagram.com/tijana.dmitrovic.ilijev" target="_blank" rel="noopener noreferrer"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
-          <div class="col-md">
+          <div class="col-md text-center">
             <div class="ftco-footer-widget mb-4 ml-md-4">
               <h2 class="ftco-heading-2">Links</h2>
               <ul class="list-unstyled">
@@ -414,18 +452,19 @@
               </ul>
             </div>
           </div>
-          <div class="col-md">
+		  <div class="row mb-5 justify-content-center">
+          <div class="col-md text-center">
             <div class="ftco-footer-widget mb-4">
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
-	              <ul>
+	              <ul class="list-unstyled">
 	                <li><span class="icon icon-map-marker"></span><span class="text">Belgrade, Serbia</span></li>
-	                <li><a href="tel:+381648408871"><span class="icon icon-phone"></span><span class="text">+381 64 8408 871</span></a></li>
 	                <li><a href="mailto:tijanadmi@yahoo.com?subject=Hello&body=I would like to discuss..."><span class="icon icon-envelope"></span><span class="text">tijanadmi@yahoo.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
           </div>
+		  </div>
         </div>
         <div class="row">
           <div class="col-md-12 text-center">
