--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	    <div class="container">
 	      <a class="navbar-brand" href="index.html">TDI SPACES</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu">Menu</span>
+	        <span style="color:grey" class="oi oi-menu ">Menu</span>
 	      </button>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
