--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
 								<h3 class="mb-5">TIS API</h3>
 							</div>
 							<div class="desc">
-								<p class="mb-5">Web service built with Golang.</p>
-							</div>
+            					<h4 style="color:grey; font-size: 14px">Web service built with Golang.</h4>
+        					</div>
 						</a>
 					</div>
 					<div class="col-md-4 text-center d-flex ftco-animate">
@@ -363,7 +363,7 @@
 								<h3 class="mb-5">SFTP XML</h3>
 							</div>
 							<div class="desc">
-								<p class="mb-5">Automated file transfer service.</p>
+								<h4 style="color:grey; font-size: 14px">Automated file transfer service.</h4>
 							</div>
 						</a>
 					</div>
@@ -373,7 +373,7 @@
 								<h3 class="mb-5">GO SARTO</h3>
 							</div>
 							<div class="desc">
-								<p class="mb-5">An application for hotel accommodation booking.</p>
+								<h4 style="color:grey; font-size: 14px">An application for hotel accommodation booking.</h4>
 							</div>
 						</a>
 					</div>
