--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
 	<meta name="google-site-verification" content="0zJzvzRHEoRftwfWaossiLHJPIIEdTbOIgIMcXLB9LE" />
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-	  
-	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
 	      <a class="navbar-brand" href="index.html">TDI SPACES</a>
@@ -519,6 +517,18 @@
             img.classList.add("loaded");
         });
     });
+});
+
+$(document).ready(function () {
+  $('.home-slider').owlCarousel({
+    items: 1,
+    loop: true,
+    autoplay: true,
+    autoplayHoverPause: true,
+    smartSpeed: 1000,
+    touchDrag: true,
+    mouseDrag: true,
+  });
 });
 
 </script>
